// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> calls helpers and renders correctly with external 1`] = `
<ForwardRef(Link)
  color="brand-blue"
  href="/cabinet/"
>
  <a
    className="link color__brand-blue hover-color__brand-deep-blue"
    href="/cabinet/"
  >
    Test link
  </a>
</ForwardRef(Link)>
`;

exports[`<Link /> calls helpers and renders correctly with pseudo 1`] = `
<ForwardRef(Link)
  color="gray38"
  pseudo={true}
>
  <a
    className="link color__gray38 hover-color__gray54"
    role="button"
    tabIndex={0}
  >
    Test link
  </a>
</ForwardRef(Link)>
`;

exports[`<Link /> calls helpers with right params and renders correctly without external 1`] = `
<ForwardRef(Link)
  className="testClass"
  color="gray38"
  href="/cart/"
  target="_blank"
>
  <a
    className="link testClass color__gray38 hover-color__gray54"
    href="/cart/"
    target="_blank"
  >
    Test link
  </a>
</ForwardRef(Link)>
`;

exports[`<Link /> render render pseudo link disabled properly 1`] = `
<ForwardRef(Link)
  disabled={true}
  pseudo={true}
>
  <a
    className="link color__brand-blue hover-color__brand-deep-blue disabled"
    role="button"
  >
    Test link
  </a>
</ForwardRef(Link)>
`;

exports[`<Link /> render render pseudo link properly 1`] = `
<ForwardRef(Link)
  pseudo={true}
>
  <a
    className="link color__brand-blue hover-color__brand-deep-blue"
    role="button"
    tabIndex={0}
  >
    Test link
  </a>
</ForwardRef(Link)>
`;
